--- a/index.html
+++ b/index.html
@@ -43,14 +43,12 @@
       <div id="nextUp" class="truncate">🎶 次: -</div>
     </div>
     <div class="flex items-center gap-3">
-      <label class="flex items-center gap-1">
-        <input type="checkbox" id="shuffleToggle" class="accent-blue-500">
-        <span class="text-sm text-gray-600">ランダム</span>
-      </label>
-      <label class="flex items-center gap-1">
-        <input type="checkbox" id="repeatToggle" class="accent-blue-500">
-        <span class="text-sm text-gray-600">リピート</span>
-      </label>
+      <button id="shuffleToggleBtn" class="text-gray-400 hover:text-blue-500 transition">
+        🔀
+      </button>
+      <button id="repeatToggleBtn" class="text-gray-400 hover:text-blue-500 transition">
+        🔁
+      </button>
     </div>
   </div>
 
